...
          }}
        />
        <Tabs.Screen
          name="profile"
          options={{
            title: t('nav.profile'),
            tabBarButtonTestID: 'tab-profile',
            tabBarButton: (props) => <TabBarButton {...props} />,
            tabBarIcon: ({ color }) => <User color={color} size={tabIconSize} />,
          }}
        />
      </Tabs>
      {isCustomer && <FAB hidden={isLocked || isChatDetail} />}
...
